Update Python version and dependencies (#65)
# Description
Updates Dockerfile to use Python3.10
Updates ovos-bus-client dependency to allow 0.1+
Adds missing ovos-config dependency which was previously just inherited
from other dependencies

# Issues
Closes #62
Needs https://github.com/NeonGeckoCom/neon_mq_connector/pull/110 to
resolve test cleanup errors

# Other Notes
<!-- Note any breaking changes, WIP changes, requests for input, etc.
here -->

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -9,6 +9,7 @@ jobs:
   py_build_tests:
     uses: neongeckocom/.github/.github/workflows/python_build_tests.yml@master
   unit_tests:
+    timeout-minutes: 5
     strategy:
       matrix:
         python-version: [3.8, 3.9, '3.10', '3.11']
